<resources>
    <string name="app_name">Flashii</string>
    <string name="flashLightBtn">Flashlight</string>
    <string name="holdFlashLightBtn">Flashlight (Hold)</string>
    <string name="rearCameraFlashLightBtn">Rear Camera and Flashlight</string>
    <string name="takePhotoBtn">Take Photo</string>
    <string name="flickerFlashLightBtn">Flicker Flashlight</string>
    <string name="incomingCallOff">Flicker on Incoming Calls OFF</string>
    <string name="incomingCallOn">Flicker on Incoming Calls ON</string>
    <string name="sosBtn">SOS</string>
    <string name="oneHz">1Hz</string>
    <string name="IncomingCallContentDescription">Flashlight flickers on incoming calls</string>
    <string name="IncomingSMSContentDescription">Flashlight flickers on incoming SMSes</string>
    <string name="ShakenBtnContentDescription">Flashlight on/off on phone shaking</string>
    <string name="SOSBtnContentDescription">Flashlight sends SOS in Morse code</string>
    <string name="FlashlightImageContentDescription">Flashlight on/off</string>
    <string name="FlashlightImageBtnContentDescription">Flashlight on/off ImageBtn</string>
    <string name="FlashlightBtnContentDescription">Flashlight on/off Btn</string>
    <string name="IncomingSoundContentDescription">Flashlight on/off on user sounds</string>
    <string name="FlashlightFlickeringContentDescription">Flashlight flickers</string>
    <string name="FlashlightFlickeringOnOffNetworkContentDescription">Flashlight flickers going on/off the network</string>
    <string name="AltitudeContentDescription">Flashlight flickers on reaching altitude threshold</string>
    <string name="BatteryContentDescription">Flashlight flickers on reaching battery power threshold</string>
    <string name="TimerContentDescription">Flashlight flickers on reaching timer threshold</string>
    <string name="GeneralContentDescription">Application general info</string>
    <string name="GeneralContentDescription2">Application general info</string>
    <string name="SettingsContentDescription">Settings button</string>
    <string name="rate">RATE</string>
    <string name="contribute">CONTRIBUTE</string>
    <string name="settings">Settings</string>
    <string name="close">CLOSE</string>
    <string name="reset">RESET</string>
    <string name="s_continue">CONTINUE</string>
    <string name="enterAmount">Enter your amount</string>
    <string name="supportText">Thank you for supporting @Flashii</string>
    <string name="rateText">Your feedback is appreciated!</string>
    <string name="publishFeedback">PUBLISH FEEDBACK</string>
    <string name="publishNote">Your review will be posted to\nthe Google Play store</string>
    <string name="howDidWeDo">How did we do?</string>
    <string name="careToShare">Care to share more about it?</string>
    <string name="dollar1">$1</string>
    <string name="dollar5">$5</string>
    <string name="dollar10">$10</string>
    <string name="dollar100">$100</string>
    <string name="or">or</string>
    <string name="enterComments">Enter your comments</string>
    <string name="enterValue">Enter value</string>
    <string name="applyChanges">APPLY</string>
    <string name="resetDefault">RESET\nDEFAULT</string>
    <string name="settingsComments">Personalize feature specifications\naccording to ranges</string>
    <string name="settingsFlickeringTitle">Max flickering frequency</string>
    <string name="settingsFlickeringNote">Range from 3 to 180 seconds (default 10)</string>
    <string name="settingsHzNote">(Range: 10 to 100 Hz)</string>
    <string name="settingsTimerTitle">Timer\'s max time</string>
    <string name="settingsTimerNote">Range: 240 (default) to 640 minutes.</string>
    <string name="settingsTiltTitle">Tilt sensitivity angle</string>
    <string name="settingsTiltNote">Range: 45 to 80 degrees (default)</string>
    <string name="settingsSoundTitle">Sound sensitivity threshold</string>
    <string name="settingsSoundNote">Range: 4000 to 20000 (default)</string>
    <string name="settingsFlickeringCallTitle">Flashlight flickering time on Call incoming</string>
    <string name="settingsFlickeringCallNote">(Range: 3 to 180 seconds)</string>
    <string name="settingsFlickeringSMSTitle">Flashlight flickering time on SMS incoming</string>
    <string name="settingsFlickeringSMSNote">(Range: 3 to 180 seconds)</string>
    <string name="settingsBatteryTitle">Flashlight flickering time on Battery Power reached</string>
    <string name="settingsBatteryNote">(Range: 3 to 180 seconds)</string>
    <string name="settingsAltitudeTitle">Flashlight flickering time on Altitude Height reached</string>
    <string name="settingsAltitudeNote">(Range: 3 to 180 seconds)</string>
    <string name="infoHelp">Help info</string>
    <string name="infoMoreComments">Find below full description\nof each feature and its icons.</string>
    <string name="infoFlashlight">Click the red/green button in the flashlight to turn On and Off the  phone\'s flashlight.\n\nYou can also Press+Hold and Release the button to turn the flashlight On and Off as well on demand.</string>
    <string name="infoFlashlightOn">Feature activated (flashlight is turned On).</string>
    <string name="infoFlashlightOff">Feature deactivated (flashlight is turned Off).</string>
    <string name="infoBattery">Phone\'s battery power shall be monitored and you will get notified by flashlight flickering when the power level you \'ve specified is reached.\n\nWhen that happens, the flashlight will be flickering for 15 seconds (default).</string>
    <string name="infoBatteryCheck">Battery power level specified has been reached.</string>
    <string name="infoNoPermissionByUser">Feature has no rights by User to function.</string>
    <string name="infoTimer">Set the time at which you want to get notified by flashlight flickering.\n\nWhen time is reached, the flashlight will be flickering for 15 seconds (default).</string>
    <string name="infoTimerCheck">Time specified has come.</string>
    <string name="infoSOS">Enable this feature to continuously transmit SOS message in Morse code from your flashlight</string>
    <string name="infoSound">You can turn On and Off the flashlight by producing short sounds, e.g. finger&#8211;snapping and hand&#8211;clapping. \n\nNote that you can configure the sound sensitivity at the desired level (1 to 10).\n\nFeature is only available if you permit Audio rights to @Flashii. If otherwise, the deactivated button is displayed instead.</string>
    <string name="infoNoPermissionByDevice">Feature cannot function on this Device.</string>
    <string name="infoIncomingSMS">Enable this feature to get notified by flashlight flickering when you receive an incoming SMS in your phone. \n\nFlickering will stop after 15 seconds (configurable in Settings).\n\nFeature is only available if you permit SMS rights to @Flashii. If otherwise, the deactivated button is displayed instead.</string>
    <string name="infoActivated">Feature activated.</string>
    <string name="infoDeactivated">Feature deactivated.</string>
    <string name="infoIncomingCall">Enable this feature to get notified by flashlight flickering when you receive an incoming Call on your phone.\n\nFlickering will stop if you answer or reject the incoming Call, or automatically after 15 seconds (configurable in Settings).\n\nFeature is only available if you permit Call rights to @Flashii. If otherwise, the deactivated button is displayed instead.</string>
    <string name="infoTilt">You can turn On and Off the flashlight by tilting the phone at around 80 degrees angle (default) from its standpoint. You can manually configure this angle between 45° - 90° in the seekbar.\n\nFeature is only available if your phone device has a Rotation Sensor. If otherwise, the deactivated button is displayed instead.</string>
    <string name="infoFlickering">Flashlight will be flickering at the frequency in Hertz (Hz) you specify in the seekbar. By default frequency ranges from 1 to 10Hz.\n\nNote that you can configure the max frequency of 10Hz to the desired value in the Settings (up to 100Hz).</string>
    <string name="infoAltitude">Set a specific Altitude height in meters (m) at which you want to get notified by flashlight flickering.\n\nWhen Altitude is reached, the flashlight will be flickering for 15 seconds (default).\n\nFeature is only available if you permit Location rights to @Flashii. If otherwise, the deactivated button is displayed instead.</string>
    <string name="infoAltitudeCheck">Altitude specified has been reached.</string>
    <string name="infoNetwork">Based on your phone\'s current network connection status, you \'ll get notified by flashlight flickering when\n\na) provider\'s Network Signal, Data or WiFi connections are lost, \nb) provider\'s Network signal, Data or WiFi are found.</string>
    <string name="maxHz">Max flickering frequency:\nRange from 10Hz (default) to 100Hz.</string>
    <string name="maxFlickeringTimer">Flickering time after an incoming Call:\nRange from 3s to 180s (default 15s)</string>
    <string name="ConnectionLost">Connection lost!</string>
    <string name="ConnectionFound">Connection found!</string>
    <string name="ConnectionToLost">Get notified when Signal, Data or WiFi are lost</string>
    <string name="ConnectionToFound">Get notified when Signal, Data or WiFi are found</string>
    <string name="backArrow">Back arrow</string>
    <string name="backArrowTilt">Back arrow Tilt</string>
    <string name="backArrowFlashlight">Back arrow Flashlight</string>
    <string name="timerFeature">Time</string>
    <string name="batteryFeature">Battery Power</string>
    <string name="altitudeFeature">Altitude Height</string>
    <string name="callFeature">Flashlight flicker on Incoming Call</string>
    <string name="smsFeature">Flashlight flicker on Incoming SMS</string>
    <string name="networkFeature">Network Connection changes</string>
    <string name="tiltFeature">Phone Tilt</string>
    <string name="soundFeature">Finger Snap</string>
    <string name="flickerFeature">Flashlight Flicker</string>
    <string name="flashlightFeature">Flashlight On/Off</string>
    <string name="sosFeature">SOS</string>
    <string name="Feature">Feature</string>
    <string name="Rate">Rate</string>
    <string name="Support">Support us</string>
    <string name="attributeDescription">Attribute description</string>
    <string name="attribute">Attribute</string>
    <string name="Specification">Specification</string>
    <string name="Icons">Icons</string>
    <string name="Button">Button</string>
    <string name="Description">Description</string>
    <string name="titleAltitude">Altitude</string>
    <string name="titleCalls">Incoming Call</string>
    <string name="titleSMS">Incoming SMS</string>
    <string name="titleNetwork">Network</string>
    <string name="titleTilt">Phone Tilts</string>
    <string name="titleSound">Sounds</string>
    <string name="titleFlicker">Flicker</string>
    <string name="titleFlashlight">Flashlight</string>
    <string name="titleSOS">SOS</string>
    <string name="titleBattery">Battery</string>
    <string name="mainTextFlashlight">Flashlight</string>
    <string name="mainTextFLICKER">FLICKER</string>
    <string name="mainTextFLICKERon">FLICKER on</string>
    <string name="mainTextOn">on</string>
    <string name="mainTextIncoming">incoming</string>
    <string name="mainTextTurnOnOff">TURN ON &amp; OFF</string>
    <string name="mainTextShorts">shorts</string>
    <string name="mainTextSOUNDs">SOUNDs</string>
    <string name="mainTextSensitivity">Sound sensitivity</string>
    <string name="mainTextActivatedFeatures">Activated features</string>
    <string name="mainTextPhoneFlickering">Phone will flicker on</string>
    <string name="mainTextPHONETILTs">PHONE TILTs</string>
    <string name="mainTextAngleSensitivity">Angle sensitivity</string>
    <string name="mainTextTRANSMIT">TRANSMIT</string>
</resources>