<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flashiiId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rearCameraFlashLightBtnId"
        android:layout_width="167dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="140dp"
        android:text="@string/rearCameraFlashLightBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flashLightBtnId" />

    <Button
        android:id="@+id/takePhotoBtnId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="67dp"
        android:text="@string/takePhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rearCameraFlashLightBtnId"
        app:layout_constraintTop_toBottomOf="@+id/flashLightBtnId" />

    <Button
        android:id="@+id/flickerFlashLightId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="@string/flickerFlashLightBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rearCameraFlashLightBtnId" />

    <SeekBar
        android:id="@+id/flickeringBarId"
        android:layout_width="277dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:tag="fsfsa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flickerFlashLightId" />

    <Switch
        android:id="@+id/switchFlickerIncomingCallsId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:checked="false"
        android:text="@string/incomingCallOff"
        android:textOff="@string/incomingCallOff"
        android:textOn="@string/incomingCallOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flickeringBarId" />

    <Button
        android:id="@+id/sosBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/sosBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchFlickerIncomingCallsId" />

    <ImageButton
        android:id="@+id/flashLightBtnId"
        android:layout_width="110dp"
        android:layout_height="77dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="155dp"
        android:background="#00A83939"
        android:contentDescription="@string/flashLightBtn"
        android:scaleType="fitCenter"
        android:src="@drawable/off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>