<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="76dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="6dp">

                <ImageButton
                    android:id="@+id/goBackArrow"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitStart"
                    android:contentDescription="@string/GeneralContentDescription"
                    android:src="@drawable/arrow_left" />
            </LinearLayout>

            <!-- Title -->
            <TextView
                android:id="@+id/rateText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="6dp"
                android:layout_marginHorizontal="76dp"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/rateText"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/rateText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/cabin_regular"
                android:text="@string/howDidWeDo"
                android:layout_marginHorizontal="76dp"
                android:textSize="12sp"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="76dp"
                android:layout_marginVertical="16dp"
                android:numStars="5"
                android:stepSize="1"
                android:rating="0.0"/>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="76dp"
                android:background="@color/greyDivider" />

            <TextView
                android:id="@+id/rateText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_regular"
                android:text="@string/careToShare"
                android:layout_marginHorizontal="76dp"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/commentsEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/enterComments"
                android:padding="3dp"
                android:textSize="12sp"
                android:fontFamily="@font/cabin_regular"
                android:inputType="textMultiLine"
                android:layout_marginHorizontal="76dp"
                android:layout_marginTop="8dp"
                android:minHeight="120dp"
                android:gravity="top|start"
                android:background="@drawable/shape"
                android:maxLength="230"
                android:layout_weight="1"
                android:maxLines="8"
                android:autofillHints="" />


            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="76dp"
                android:background="@color/greyDivider" />

            <!-- Buttons -->
            <Button
                android:id="@+id/publishFeedbackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="76dp"
                android:fontFamily="@font/cabin_semibold"
                android:textAlignment="center"
                android:text="@string/publishFeedback"
                android:textSize="14sp"
                app:backgroundTint="@color/blueOff"
                app:strokeColor="@color/whiteCollar"
                app:strokeWidth="1dp"
                app:cornerRadius="8dp"/>

            <!-- Note -->
            <TextView
                android:id="@+id/rateText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin_regular"
                android:text="@string/publishNote"
                android:layout_marginHorizontal="76dp"
                android:textSize="12sp"
                android:textColor="@color/greyNote"
                android:layout_marginBottom="36dp">
            </TextView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>