<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blueOffBack5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/supportLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="36dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp">

                <ImageButton
                    android:id="@+id/supportGoBackArrow"
                    android:layout_width="76dp"
                    android:layout_height="48dp"
                    android:background="@color/blueOffBack5"
                    android:scaleType="fitStart"
                    android:paddingVertical="10dp"
                    android:paddingEnd="38dp"
                    android:paddingStart="12dp"
                    android:src="@drawable/arrow_left"
                    android:contentDescription="@string/backArrow"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cabin_regular"
                    android:text="@string/Support"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_marginEnd="76dp"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

            </LinearLayout>

            <!-- Title -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:fontFamily="@font/cabin_regular"
                android:text="@string/supportText"
                app:backgroundTint="@color/blueOffBack2"
                app:strokeColor="@color/whiteCollar"
                app:strokeWidth="1dp"
                tools:ignore="VisualLintButtonSize"
                android:textSize="22sp"
                android:textAlignment="center"
                android:textColor="@color/white"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp">

                <RadioButton
                    android:id="@+id/support1Btn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/support_radio_btn_bg"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:fontFamily="@font/cabin_regular"
                    android:gravity="center"
                    android:text="@string/dollar1"
                    android:textColor="@color/greyNoteDarker6"
                    android:textSize="18sp"
                    tools:ignore="VisualLintButtonSize,TextContrastCheck" />

                <RadioButton
                    android:id="@+id/support10Btn"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/support_radio_btn_bg"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/cabin_regular"
                    android:text="@string/dollar10"
                    android:textSize="18sp"
                    android:textColor="@color/greyNoteDarker6"
                    tools:ignore="VisualLintButtonSize" />

                <RadioButton
                    android:id="@+id/support100Btn"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/support_radio_btn_bg"
                    android:button="@android:color/transparent"
                    android:fontFamily="@font/cabin_regular"
                    android:text="@string/dollar100"
                    android:textSize="18sp"
                    android:textColor="@color/greyNoteDarker6"
                    tools:ignore="VisualLintButtonSize" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="34dp"
                android:layout_marginHorizontal="50dp"
                android:background="@color/blueOff"/>


            <Button
                android:id="@+id/supportContinueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/cabin_regular"
                android:text="@string/contribute"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/blueOff"
                tools:ignore="VisualLintButtonSize,TextContrastCheck" />



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>