<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/cabin_semibold"
                android:text="@string/donateText"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/altitudeTextId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/donate1Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="76dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/cabin_semibold"
                android:textAlignment="center"
                android:minHeight="66dp"
                android:text="$1"
                android:textSize="14sp"
                app:backgroundTint="@color/blueOff"
                app:strokeColor="#ECF8F9"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/donate10Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="76dp"
                android:fontFamily="@font/cabin_semibold"
                android:textAlignment="center"
                android:minHeight="66dp"
                android:text="$10"
                android:textSize="14sp"
                app:backgroundTint="@color/blueOff"
                app:strokeColor="#ECF8F9"
                app:strokeWidth="3dp" />

            <Button
                android:id="@+id/donate100Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="76dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/cabin_semibold"
                android:textAlignment="center"
                android:minHeight="66dp"
                android:text="$100"
                android:textSize="14sp"
                app:backgroundTint="@color/blueOff"
                app:strokeColor="#ECF8F9"
                app:strokeWidth="3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="76dp"
            android:textAlignment="center"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider1"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:fontFamily="@font/cabin_semibold"
                android:text="or"
                android:layout_marginTop="16dp"
                android:background="@color/blueOff" />

            <TextView
                android:id="@+id/dividerText"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/cabin_regular"
                android:text="or"
                android:layout_marginHorizontal="5dp"
                android:gravity="center_vertical|center"
                android:textSize="14sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:fontFamily="@font/cabin_semibold"
                android:layout_marginTop="16dp"
                android:text="or"
                android:background="@color/blueOff" />
        </LinearLayout>




            <EditText
                android:id="@+id/donateManualText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/enterAmount"
                android:inputType="phone"
                android:layout_marginHorizontal="76dp"
                android:layout_marginBottom="26dp"
                android:textAlignment="center"
                android:fontFamily="@font/cabin_regular"
                android:autofillHints="" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:textAlignment="center"
                android:layout_marginBottom="36dp">

                <Button
                    android:id="@+id/donateCloseBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cabin_semibold"
                    android:minHeight="48dp"
                    android:text="@string/close"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:backgroundTint="@color/blueOff" />

                <Button
                    android:id="@+id/donateContinueBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cabin_semibold"
                    android:minHeight="48dp"
                    android:text="@string/s_continue"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:backgroundTint="@color/blueOff" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>